--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Taco night left overs make an amazing pizza sandwich!</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Scalp Nasdaq Like This ⚡</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>When RSI Crosses 70, How Often Does It Keep Climbing?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>The first politician on Gary's Economics</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>How the Market Tests Traders</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Committing Your Life to Letting Go</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Yoni | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -431,7 +431,7 @@
                     <div class="video-info">
                         <h3>Mindset Shift in Trading</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -442,7 +442,7 @@
                     <div class="video-info">
                         <h3>Just a Housewife? Sadhguru on Motherhood</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -640,7 +640,7 @@
                     <div class="video-info">
                         <h3>Saina Nehwal Plays Badminton with Sadhguru!</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -651,7 +651,7 @@
                     <div class="video-info">
                         <h3>The Power of Desensitising in Trading</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -882,7 +882,7 @@
                     <div class="video-info">
                         <h3>Getting Stressed During Trades</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Scalp Nasdaq Like This ⚡</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>When RSI Crosses 70, How Often Does It Keep Climbing?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5107,7 +5107,7 @@
                         <div class="video-info">
                             <h3>The first politician on Gary's Economics</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5118,7 +5118,7 @@
                         <div class="video-info">
                             <h3>How the Market Tests Traders</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5195,7 +5195,7 @@
                         <div class="video-info">
                             <h3>Mindset Shift in Trading</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5261,7 +5261,7 @@
                         <div class="video-info">
                             <h3>The Power of Desensitising in Trading</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5360,7 +5360,7 @@
                         <div class="video-info">
                             <h3>Getting Stressed During Trades</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Committing Your Life to Letting Go</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>Yoni | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7363,7 +7363,7 @@
                         <div class="video-info">
                             <h3>Just a Housewife? Sadhguru on Motherhood</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7462,7 +7462,7 @@
                         <div class="video-info">
                             <h3>Saina Nehwal Plays Badminton with Sadhguru!</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8739,7 +8739,7 @@
                         <div class="video-info">
                             <h3>Taco night left overs make an amazing pizza sandwich!</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
