--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>How to Open Your Heart? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -640,7 +640,7 @@
                     <div class="video-info">
                         <h3>AI Bot Backtest: Real Money Performance vs. Estimates #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1377,7 +1377,7 @@
                     <div class="video-info">
                         <h3>Trading Bot Showdown: AI vs. CCI Twist Results! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5250,7 +5250,7 @@
                         <div class="video-info">
                             <h3>AI Bot Backtest: Real Money Performance vs. Estimates #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5591,7 +5591,7 @@
                         <div class="video-info">
                             <h3>Trading Bot Showdown: AI vs. CCI Twist Results! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>How to Open Your Heart? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
