--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>How to Open Your Heart? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -618,7 +618,7 @@
                     <div class="video-info">
                         <h3>How Wealth Inequality Affects You</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5250,7 +5250,7 @@
                         <div class="video-info">
                             <h3>How Wealth Inequality Affects You</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>How to Open Your Heart? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
