--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>#Throwback Sadhguru Brings Devi to Life on Canvas</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>How I Pass Prop Firm Challenges and Get Funded (the5ers)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Learning to Stay Open - The Path to Unconditional Love</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Why Do We Only Appreciate People After They're Gone? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Taco night left overs make an amazing pizza sandwich!</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -541,7 +541,7 @@
                     <div class="video-info">
                         <h3>Tip.11 When u make a hole on a pizza</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -552,7 +552,7 @@
                     <div class="video-info">
                         <h3>VIKKSTAR IN WORLD’S FASTEST CAR</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>How I Pass Prop Firm Challenges and Get Funded (the5ers)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>#Throwback Sadhguru Brings Devi to Life on Canvas</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Learning to Stay Open - The Path to Unconditional Love</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>Why Do We Only Appreciate People After They're Gone? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8739,7 +8739,7 @@
                         <div class="video-info">
                             <h3>Taco night left overs make an amazing pizza sandwich!</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -8783,7 +8783,7 @@
                         <div class="video-info">
                             <h3>Tip.11 When u make a hole on a pizza</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9609,7 +9609,7 @@
                         <div class="video-info">
                             <h3>VIKKSTAR IN WORLD’S FASTEST CAR</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
